--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "nodemailer": "^6.9.13",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
