--- a/HomeBrewery/package.json
+++ b/HomeBrewery/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
+    "ably": "^2.1.0",
+    "ably-react": "^1.1.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
